# ansible-collection

./: .ansible-lint  .gitignore  .yamllint.yml  CHANGELOG.rst  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: docs.yml  lint.yml  molecule.yml  publish.yml  release.yml  sanity.yml
changelogs/: config.yaml
roles/fluentbit/: README.md
roles/fluentbit/defaults/: main.yml
roles/fluentbit/files/: parsers.yml
roles/fluentbit/handlers/: main.yml
roles/fluentbit/meta/: argument_specs.yml  main.yml
roles/fluentbit/molecule/default/: converge.yml  molecule.yml  verify.yml
roles/fluentbit/tasks/: configure_linux.yml  configure_windows.yml  install_linux.yml  install_windows.yml  main.yml  service_linux.yml  service_windows.yml
roles/fluentbit/templates/: fluent-bit.service.d-override.conf.j2  fluent-bit.yaml.j2
roles/fluentbit/vars/: linux.yml  windows.yml
tests/: README.md  test_fluentbit.yml
